New - Mysql Provider installed and CRUD for Departaments done.

--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMVCContext": "server=localhost;userid=dev;password=root;database=saleswebmvcappdb"
+  }
 }
